documentacion/obtenida/ARINC 429/driver and software/PC1553-3/API/P13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef unsigned long * LPMSGADDR;
typedef const char * LPCSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;

P13W32API VOID __stdcall P12_Writebcdwd(INT countval,INT startval,LPVOID srcptr,HCARD handleval);

P13W32API VOID __stdcall P12_Writertdwd(INT TRval,INT SAval,INT countval,INT startval,LPVOID srcptr,HCARD handleval);

P13W32API VOID __stdcall P12_Writewd(INT value,INT offset,HCARD handleval);

P13W32API VOID __stdcall P12_Writewds(INT offval,LPVOID srcptr,INT cntval,HCARD handleval);


P13W32API ULONG __stdcall P13_AddrDSP(ULONG addr);

P13W32API ULONG __stdcall P13_AddrHost(ULONG addr);

P13W32API ERRVAL __stdcall P13_BCConfigEx(ULONG configval,USHORT count,HCARD handleval);

P13W32API MSGADDR __stdcall P13_BCConfigMsg(ULONG configval,MSGADDR msgaddr,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedAgain(SCHNDX index,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedBranch(USHORT condition,SCHNDX destindex,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedBranchDin0(SCHNDX destindex,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedBranchDin1(SCHNDX destindex,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedBranchEx(USHORT condition1,USHORT condition2,USHORT condition3,SCHNDX destindex,HCARD handleval);

P13W32API ERRVAL __stdcall P13_BCSchedBuild(USHORT nummsgs,LPMSGADDR msgaddr,LPUSHORT freq,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedCall(SCHNDX destindex,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedCallCond(USHORT condition,SCHNDX destindex,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedCallCondEx(USHORT condition1,USHORT condition2,USHORT condition3,SCHNDX destindex,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedEntry(HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedFrameEnd(HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedFrameStart(ULONG timeval,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedGap(USHORT gapval,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedGoto(SCHNDX destindex,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedHalt(HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedInt(USHORT tagval,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedIntCond(USHORT condition,USHORT tagval,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedIntCondEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT tagval,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedNop(HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedPause(HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedPulse(HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedPulse0(HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedPulse1(HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedRestart(HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedRetryEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT retryflag,USHORT retries,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedReturn(HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedUser(ULONG useraddr,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSetEntry(HCARD handleval);

P13W32API ERRVAL __stdcall P13_BCSetTimeout(USHORT timeoutval,HCARD handleval);

P13W32API ULONG __stdcall P13_BlkAddr(INT taval,HCARD handleval);

P13W32API USHORT __stdcall P13_BlkOptRd(INT taval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_BlkOptWr(USHORT rtopt,INT taval,HCARD handleval);

P13W32API ULONG __stdcall P13_BlkPtrRd(INT taval,HCARD handleval);

P13W32API VOID __stdcall P13_BlkPtrWr(ULONG descaddr,INT taval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_BlkRd(LPUSHORT block,INT taval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_BlkReset(INT taval,HCARD handleval);

P13W32API USHORT __stdcall P13_BlkSWDRd(INT taval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_BlkSWDWr(USHORT swdval,INT taval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_BlkWipe(HCARD handleval);

P13W32API ERRVAL __stdcall P13_BlkWr(LPUSHORT block,INT taval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_CardBoot(HCARD handleval);

P13W32API ERRVAL __stdcall P13_CardCloseAll(VOID);

P13W32API ERRVAL __stdcall P13_CardConfig(BOOL enableflag,USHORT command,USHORT taval,HCARD handleval);

P13W32API ULONG __stdcall P13_CardGetInfo(USHORT infotype,HCARD handleval);

P13W32API ERRVAL __stdcall P13_CardGetInfoEx(LPUSHORT bufmodel,USHORT bufmodelcount,LPUSHORT buffeature,USHORT buffeaturecount,HCARD handleval);

P13W32API VOID __stdcall P13_CardInit(VOID);

P13W32API BOOL __stdcall P13_CardIsRunning(HCARD handleval);

P13W32API ERRVAL __stdcall P13_CardNop(HCARD handleval);

P13W32API HCARD __stdcall P13_CardOpenEx(LPCSTR cardname,ULONG memval,USHORT ioval,USHORT irqval,USHORT drqval);

P13W32API HCARD __stdcall P13_CardOpenExx(LPCSTR cardname,ULONG memval,USHORT ioval,USHORT irqval,USHORT drqval,LPVOID hAppWnd,USHORT uiRemovalMsg);

P13W32API VOID __stdcall P13_CardResetEx(HCARD handleval);

P13W32API ERRVAL __stdcall P13_CardResume(HCARD handleval);

P13W32API ERRVAL __stdcall P13_CardTest(USHORT level,HCARD handleval);

P13W32API ERRVAL __stdcall P13_CardTest0(HCARD handleval);

P13W32API ERRVAL __stdcall P13_CardTest1(HCARD handleval);

P13W32API ERRVAL __stdcall P13_CardTest2(HCARD handleval);

P13W32API ERRVAL __stdcall P13_CardTest3(HCARD handleval);

P13W32API VOID __stdcall P13_CardTrigger(HCARD handleval);

P13W32API ULONG __stdcall P13_CmdAddr(SCHNDX index,HCARD handleval);

P13W32API ULONG __stdcall P13_CmdAlloc(USHORT count,HCARD handleval);

P13W32API ULONG __stdcall P13_CmdBaseRd(HCARD handleval);

P13W32API VOID __stdcall P13_CmdBaseWr(ULONG addrval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_CmdClear(HCARD handleval);

P13W32API USHORT __stdcall P13_CmdCountRd(HCARD handleval);

P13W32API VOID __stdcall P13_CmdCountWr(USHORT countval,HCARD handleval);

P13W32API USHORT __stdcall P13_CmdCtrlRd(SCHNDX index,HCARD handleval);

P13W32API VOID __stdcall P13_CmdCtrlWr(USHORT ctrlval,SCHNDX index,HCARD handleval);

P13W32API USHORT __stdcall P13_CmdCurrRd(HCARD handleval);

P13W32API VOID __stdcall P13_CmdCurrWr(USHORT addrval,HCARD handleval);

P13W32API VOID __stdcall P13_CmdInit(USHORT opcode,LPUSHORT block);

P13W32API SCHNDX __stdcall P13_CmdInsert(LPUSHORT block,HCARD handleval);

P13W32API USHORT __stdcall P13_CmdMaxRd(HCARD handleval);

P13W32API VOID __stdcall P13_CmdMaxWr(USHORT count,HCARD handleval);